messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging
      version: blue
  template:
    metadata:
      labels:
        app: django-messaging
        version: blue
    spec:
      containers:
        - name: django
          image: django-messaging:blue
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django-messaging
    version: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
